// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just title 1`] = `
<div
  class="feature__Container-sc-7iw5qb-0 iqMdKJ"
>
  <h1
    class="feature__Title-sc-7iw5qb-1 kA-Dfcq"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just title 2`] = `
<div
  class="feature__Container-sc-7iw5qb-0 iqMdKJ"
>
  <h1
    class="feature__Title-sc-7iw5qb-1 kA-Dfcq"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-7iw5qb-0 iqMdKJ"
>
  <h1
    class="feature__Title-sc-7iw5qb-1 kA-Dfcq"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-7iw5qb-2 inUVhh"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
